2006-11-29  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsWidgets.py (PlaceEntry.set_button): Dynamically set
	tooltips.
	* src/glade/gramps.glade (event_edit, eref-edit): Do not set tooltips.

2006-11-29  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_RelationView.py (write_title): Always write Label
	for birth and death.

2006-11-29  Alex Roitman  <shura@gramps-project.org>
	* INSTALL: Update.

2006-11-28  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Place/_HasPlace.py (apply_location): Add
	method; 
	(apply): Rework to correctly match location parameters.

2006-11-28  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: fix attribute handling
	* src/DisplayModels/_PeopleModel.py: expand caching.

2006-11-28  Brian Matherly  <brian@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: fix path for bsddb env in Windows.
	* src/docgen/KwordDoc.py: don't us getuid in Windows
	* src/plugins/NarrativeWeb.py: don't us getuid in Windows

2006-11-28  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/MediaManager.py (get_rel_path): Correctly work out
	the drive letter for the path.

2006-11-27  Alex Roitman  <shura@gramps-project.org>
	* src/DbLoader.py (DbLoader.save_as): Prohibit SaveAs into the
	currently opened database.
	(DbLoader.import_file): Prohibit importing from the currently
	opened database.
	* src/GrampsDb/_WriteXML.py (dump_person_ref): Properly export
	associations.
	* src/GrampsDb/_WriteGedcom.py (write_person): Typo.

2006-11-27  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Filters/Rules/Person/_HasCompleteRecord.py: Use new marker API
	* src/RelLib/_Person.py (get_complete_flag): Remove old unused API
	* src/RelLib/_Family.py (get/set_complete_flag): Remove old unused API
	
2006-11-27  Don Allingham  <don@gramps-project.org>
	* configure.in: change version number

2006-11-26  Don Allingham  <don@gramps-project.org>
	* 2.2.3 released
	* configure.in: up version number