@@ -39,6 +39,7 @@ from _HasNoteMatchingSubstringOf import HasNoteMatchingSubstringOf
 from _FamilyPrivate import FamilyPrivate
 from _HasAttribute import HasAttribute
 from _HasEvent import HasEvent
+from _HasMarkerOf import HasMarkerOf
 from _MatchesFilter import MatchesFilter
 from _FatherHasNameOf import FatherHasNameOf
 from _FatherHasIdOf import FatherHasIdOf
@@ -57,6 +58,7 @@ editor_rule_list = [
     FamilyPrivate,
     HasEvent,
     HasAttribute,
+    HasMarkerOf,
     MatchesFilter,
     FatherHasNameOf,
     FatherHasIdOf,
