@@ -1,0 +1,55 @@
+#
+# Gramps - a GTK+/GNOME based genealogy program
+#
+# Copyright (C) 2002-2006  Donald N. Allingham
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+#
+
+# $Id: _HasEvent.py 6635 2006-05-13 03:53:06Z dallingham $
+
+#-------------------------------------------------------------------------
+#
+# Standard Python modules
+#
+#-------------------------------------------------------------------------
+from gettext import gettext as _
+
+#-------------------------------------------------------------------------
+#
+# GRAMPS modules
+#
+#-------------------------------------------------------------------------
+from RelLib import MarkerType
+from Filters.Rules._Rule import Rule
+
+#-------------------------------------------------------------------------
+#
+# HasEvent
+#
+#-------------------------------------------------------------------------
+class HasMarkerBase(Rule):
+    """Rule that checks for a person with a particular value"""
+
+
+    labels      = [ _('Marker type:')]
+    name        =  _('Has marker of')
+    description =  _("Matches markers of a partikular type")
+    category    = _('General filters')
+    
+    def apply(self,db,obj):
+        specified_type = MarkerType()
+        specified_type.set_from_xml_str(self.list[0])
+        return obj.get_marker() == specified_type
